# evo2

./: .gitmodules  AUTHORS  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
evo2/: __init__.py  models.py  utils.py
evo2/test/: test_evo2.py  test_evo2_generation.py  test_model_load.py
notebooks/brca1/: 41586_2018_461_MOESM3_ESM.xlsx  brca1_zero_shot_vep.ipynb
notebooks/generation/: generation_notebook.ipynb
test/: test_evo2.py  test_evo2_generation.py
