[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo2"
version = "0.2.0"
description = "Genome modeling across all domains of life"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Evo 2 Team"},
]
dependencies = [
    "biopython",
    "huggingface_hub",
    "torch>=2.6.0",
    "transformer_engine[pytorch]==1.13.0",
    "vtx",
]

[project.urls]
Homepage = "https://github.com/arcinstitute/evo2"
Repository = "https://github.com/arcinstitute/evo2"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
include = ["evo2*"]

[tool.setuptools.package-data]
"evo2" = ["configs/*.yml"]
"evo2.test" = ["data/*.csv"]